--- a/doge-rpc/pom.xml
+++ b/doge-rpc/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.2.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.yadong.doge</groupId>
+            <artifactId>doge-config</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
