提供Redis/Zookeeper作为注册中心的支持相关功能配置

--- a/doge-rpc/pom.xml
+++ b/doge-rpc/pom.xml
@@ -22,6 +22,18 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.yadong.doge</groupId>
+            <artifactId>doge-utils</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.yadong.doge</groupId>
+            <artifactId>doge-registry</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
