完善RedisClient与ZookeeperClient注册功能

--- a/doge-registry/pom.xml
+++ b/doge-registry/pom.xml
@@ -58,5 +58,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.75</version>
         </dependency>
+        <dependency>
+            <groupId>com.yadong.doge</groupId>
+            <artifactId>doge-utils</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
