添加@DogeReference扫描处理器， 优化Invoker逻辑

--- a/doge-test-provider-2/src/main/resources/application.yml
+++ b/doge-test-provider-2/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 18081
 
 doge:
-  registry: redis
+  registry: zookeeper
   zookeeper:
     host: 120.26.76.100 #must
     port: 2181
