添加Netty作为网络传输层支持, 优化@DogeReference接口代理类ServiceProxy发起远程调用逻辑, 优化NettyClient远程的并发调用。

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>doge-registry</module>
         <module>doge-config</module>
         <module>doge-utils</module>
+        <module>doge-cluster</module>
     </modules>
     <packaging>pom</packaging>
 
