增加监控中心, 监控所有的消费者调用记录

--- a/doge-monitor/pom.xml
+++ b/doge-monitor/pom.xml
@@ -9,11 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>doge-remoting</artifactId>
+    <artifactId>doge-monitor</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.yadong.doge</groupId>
+            <artifactId>doge-registry</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
