实现动态服务发现和注册, 增加监控中心的服务提供者信息显示

--- a/doge-monitor/pom.xml
+++ b/doge-monitor/pom.xml
@@ -18,9 +18,8 @@
     <dependencies>
         <dependency>
             <groupId>com.yadong.doge</groupId>
-            <artifactId>doge-registry</artifactId>
+            <artifactId>doge-rpc</artifactId>
             <version>1.0.0</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
